@@ -4,11 +4,12 @@ package ru.practicum.shareit.user;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class UserMapper {
 
-    public static UserDto userToDto(User user) {
+    public UserDto toUserDto(User user) {
         return UserDto.builder()
                 .id(user.getId())
                 .name(user.getName())
@@ -16,15 +17,13 @@ public class UserMapper {
                 .build();
     }
 
-    public static User dtoToUser(UserDto userDto) {
-        return User.builder()
-                .id(userDto.getId())
-                .name(userDto.getName())
-                .email(userDto.getEmail())
-                .build();
+    public User toUser(UserDto userDto) {
+        return new User(userDto.getId(), userDto.getName(), userDto.getEmail());
     }
 
-    public static List<UserDto> usersToDto(List<User> users) {
-        return users.stream().map(UserMapper::userToDto).toList();
+    public List<UserDto> usersToDto(List<User> users) {
+        return users.stream()
+                .map(this::toUserDto)
+                .collect(Collectors.toList());
     }
 }
